tests/NormalTests/paczka1/small_fuzzy/44590099.err
Error in line 2: Uny A54 32,3
Error in line 10: Uny A205 74,7
Error in line 13: Uny S779 28,4
